--- a/src/auth/style.css
+++ b/src/auth/style.css
@@ -5,6 +5,8 @@ body {
         display: grid;
         grid-template-rows: auto auto auto;
         place-items: center;
+        text-align: center;
+        min-width: 33vw;
         grid-gap: 1rem;
         padding: 1rem;
         color: #fff;
@@ -46,5 +48,41 @@ body {
                 transition: background 0.2s ease;
             }
         }
+
+        & ul.route-links {
+            justify-content: center;
+            align-items: center;
+            padding: 0;
+            margin: 0;
+            list-style: none;
+            width: 100%;
+            margin-block: 0.5rem;
+
+            & li {
+                width: 100%;
+                background-color: rgb(33, 19, 126);
+                margin: 0 0.5rem;
+                text-align: left;
+                list-style: none;
+                margin-block: 0.5rem;
+                padding: 0.5rem;
+
+                & a {
+                    color: #fff;
+                    text-decoration: none;
+                    &:hover {
+                        color: #334cda;
+                    }
+                }
+            }
+        }
     }
+}
+
+.success {
+    color: #1fc145;
+}
+
+.failed {
+    color: #ff4d4d;
 }
